added mock responses to event and activity calls
